@@ -1,5 +1,7 @@
 2000-03-19  Ulrich Drepper  <drepper@redhat.com>
 
+	* include/stdlib.h: Add prototype for __cxa_atexit.
+
 	* sysdeps/unix/sysv/linux/i386/sys/debugreg.h: Update comment about
 	_SLOWDOWN flags.  Patch by Jim Blandy <jimb@cygnus.com>.
 
